cache/src/main/java/net/runelite/cache/script/assembler/rs2asmParser.java
// Generated from net\runelite\cache\script\assembler\rs2asm.g4 by ANTLR 4.6
package net.runelite.cache.script.assembler;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import java.util.List;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class rs2asmParser extends Parser
{
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, NEWLINE=7, INT=8, QSTRING=9, 
		IDENTIFIER=10, COMMENT=11, WS=12;
	public static final int
		RULE_prog = 0, RULE_header = 1, RULE_id = 2, RULE_int_stack_count = 3, 
		RULE_string_stack_count = 4, RULE_int_var_count = 5, RULE_string_var_count = 6, 
		RULE_id_value = 7, RULE_int_stack_value = 8, RULE_string_stack_value = 9, 
		RULE_int_var_value = 10, RULE_string_var_value = 11, RULE_line = 12, RULE_instruction = 13, 
		RULE_label = 14, RULE_instruction_name = 15, RULE_name_string = 16, RULE_name_opcode = 17, 
		RULE_instruction_operand = 18, RULE_operand_int = 19, RULE_operand_qstring = 20, 
		RULE_operand_label = 21, RULE_switch_lookup = 22, RULE_switch_key = 23, 
		RULE_switch_value = 24;
	public static final String[] ruleNames = {
		"prog", "header", "id", "int_stack_count", "string_stack_count", "int_var_count", 
		"string_var_count", "id_value", "int_stack_value", "string_stack_value", 
		"int_var_value", "string_var_value", "line", "instruction", "label", "instruction_name", 
		"name_string", "name_opcode", "instruction_operand", "operand_int", "operand_qstring", 
		"operand_label", "switch_lookup", "switch_key", "switch_value"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.id '", "'.int_stack_count '", "'.string_stack_count '", "'.int_var_count '", 
		"'.string_var_count '", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "NEWLINE", "INT", "QSTRING", 
		"IDENTIFIER", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "rs2asm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public rs2asmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext
	{
		public List<TerminalNode> NEWLINE() { return getTokens(rs2asmParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(rs2asmParser.NEWLINE, i);
		}
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException
	{
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(50);
				match(NEWLINE);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) {
				{
				{
				setState(56);
				header();
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(57);
					match(NEWLINE);
					}
					}
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				line();
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(68);
					match(NEWLINE);
					}
					}
					setState(71); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INT || _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Int_stack_countContext int_stack_count() {
			return getRuleContext(Int_stack_countContext.class,0);
		}
		public String_stack_countContext string_stack_count() {
			return getRuleContext(String_stack_countContext.class,0);
		}
		public Int_var_countContext int_var_count() {
			return getRuleContext(Int_var_countContext.class,0);
		}
		public String_var_countContext string_var_count() {
			return getRuleContext(String_var_countContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				id();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				int_stack_count();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				string_stack_count();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				int_var_count();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				string_var_count();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public Id_valueContext id_value() {
			return getRuleContext(Id_valueContext.class,0);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitId(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__0);
			setState(85);
			id_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_stack_countContext extends ParserRuleContext {
		public Int_stack_valueContext int_stack_value() {
			return getRuleContext(Int_stack_valueContext.class,0);
		}
		public Int_stack_countContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_stack_count; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterInt_stack_count(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitInt_stack_count(this);
		}
	}

	public final Int_stack_countContext int_stack_count() throws RecognitionException {
		Int_stack_countContext _localctx = new Int_stack_countContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_int_stack_count);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__1);
			setState(88);
			int_stack_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_stack_countContext extends ParserRuleContext {
		public String_stack_valueContext string_stack_value() {
			return getRuleContext(String_stack_valueContext.class,0);
		}
		public String_stack_countContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_stack_count; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterString_stack_count(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitString_stack_count(this);
		}
	}

	public final String_stack_countContext string_stack_count() throws RecognitionException {
		String_stack_countContext _localctx = new String_stack_countContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string_stack_count);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__2);
			setState(91);
			string_stack_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_var_countContext extends ParserRuleContext {
		public Int_var_valueContext int_var_value() {
			return getRuleContext(Int_var_valueContext.class,0);
		}
		public Int_var_countContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_var_count; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterInt_var_count(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitInt_var_count(this);
		}
	}

	public final Int_var_countContext int_var_count() throws RecognitionException {
		Int_var_countContext _localctx = new Int_var_countContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_int_var_count);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__3);
			setState(94);
			int_var_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_var_countContext extends ParserRuleContext {
		public String_var_valueContext string_var_value() {
			return getRuleContext(String_var_valueContext.class,0);
		}
		public String_var_countContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_var_count; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterString_var_count(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitString_var_count(this);
		}
	}

	public final String_var_countContext string_var_count() throws RecognitionException {
		String_var_countContext _localctx = new String_var_countContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_string_var_count);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__4);
			setState(97);
			string_var_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_valueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(rs2asmParser.INT, 0); }
		public Id_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterId_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitId_value(this);
		}
	}

	public final Id_valueContext id_value() throws RecognitionException {
		Id_valueContext _localctx = new Id_valueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_id_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_stack_valueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(rs2asmParser.INT, 0); }
		public Int_stack_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_stack_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterInt_stack_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitInt_stack_value(this);
		}
	}

	public final Int_stack_valueContext int_stack_value() throws RecognitionException {
		Int_stack_valueContext _localctx = new Int_stack_valueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_int_stack_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_stack_valueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(rs2asmParser.INT, 0); }
		public String_stack_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_stack_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterString_stack_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitString_stack_value(this);
		}
	}

	public final String_stack_valueContext string_stack_value() throws RecognitionException {
		String_stack_valueContext _localctx = new String_stack_valueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_string_stack_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_var_valueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(rs2asmParser.INT, 0); }
		public Int_var_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_var_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterInt_var_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitInt_var_value(this);
		}
	}

	public final Int_var_valueContext int_var_value() throws RecognitionException {
		Int_var_valueContext _localctx = new Int_var_valueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_int_var_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_var_valueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(rs2asmParser.INT, 0); }
		public String_var_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_var_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterString_var_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitString_var_value(this);
		}
	}

	public final String_var_valueContext string_var_value() throws RecognitionException {
		String_var_valueContext _localctx = new String_var_valueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_string_var_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public Switch_lookupContext switch_lookup() {
			return getRuleContext(Switch_lookupContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_line);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				instruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				label();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				switch_lookup();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public Instruction_nameContext instruction_name() {
			return getRuleContext(Instruction_nameContext.class,0);
		}
		public Instruction_operandContext instruction_operand() {
			return getRuleContext(Instruction_operandContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			instruction_name();
			setState(115);
			instruction_operand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(rs2asmParser.IDENTIFIER, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitLabel(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(IDENTIFIER);
			setState(118);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Instruction_nameContext extends ParserRuleContext {
		public Name_stringContext name_string() {
			return getRuleContext(Name_stringContext.class,0);
		}
		public Name_opcodeContext name_opcode() {
			return getRuleContext(Name_opcodeContext.class,0);
		}
		public Instruction_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterInstruction_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitInstruction_name(this);
		}
	}

	public final Instruction_nameContext instruction_name() throws RecognitionException {
		Instruction_nameContext _localctx = new Instruction_nameContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_instruction_name);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				name_string();
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				name_opcode();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_stringContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(rs2asmParser.IDENTIFIER, 0); }
		public Name_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterName_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitName_string(this);
		}
	}

	public final Name_stringContext name_string() throws RecognitionException {
		Name_stringContext _localctx = new Name_stringContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_name_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_opcodeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(rs2asmParser.INT, 0); }
		public Name_opcodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_opcode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterName_opcode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitName_opcode(this);
		}
	}

	public final Name_opcodeContext name_opcode() throws RecognitionException {
		Name_opcodeContext _localctx = new Name_opcodeContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_name_opcode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Instruction_operandContext extends ParserRuleContext {
		public Operand_intContext operand_int() {
			return getRuleContext(Operand_intContext.class,0);
		}
		public Operand_qstringContext operand_qstring() {
			return getRuleContext(Operand_qstringContext.class,0);
		}
		public Operand_labelContext operand_label() {
			return getRuleContext(Operand_labelContext.class,0);
		}
		public Instruction_operandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction_operand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).enterInstruction_operand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof rs2asmListener ) ((rs2asmListener)listener).exitInstruction_operand(this);
		}
	}
